--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -11,8 +11,9 @@
     font-family: Jomhuria, sans-serif;
     font-size: 4.5rem;
     font-weight: 500;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     cursor: pointer;
+    color: #474444;
 }
 
 .sidebarTabs{
@@ -60,5 +61,10 @@
 
 .btn {
     cursor: pointer;
+    transition: transform 0.3s ease;
 }
+
+.btn:hover {
+    transform: scale(1.1);
+  }
 
