--- a/src/pages/Dashboard/DashboardPage.module.css
+++ b/src/pages/Dashboard/DashboardPage.module.css
@@ -49,7 +49,6 @@
     word-wrap: break-word;
     white-space: pre-wrap; 
     overflow-wrap: break-word; 
-
 }
 
 
@@ -113,4 +112,9 @@
     font-size: 2rem;
     color: #474444;
     font-family: "Poppins", sans-serif;
+}
+
+.loader {
+    width: 50px;
+    height: 50px;
 }
