--- a/src/pages/Quiz/QuizStats/QuizStats.module.css
+++ b/src/pages/Quiz/QuizStats/QuizStats.module.css
@@ -55,7 +55,10 @@
     border-radius: 10px;
   }
   
-  
+  .loader {
+    width: 50px;
+    height: 50px;
+  }
   
   tr th:first-child,
   td:first-child {
@@ -86,3 +89,15 @@
   .actionTab img {
     cursor: pointer;
   }
+
+  .editIcon,
+.deleteIcon,
+.shareIcon {
+  transition: transform 0.3s ease;
+}
+
+.editIcon:hover,
+.deleteIcon:hover,
+.shareIcon:hover {
+  transform: scale(1.1);
+}
